fix: Fix path in action and workflow invocation

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,9 @@ on:
       - "Cargo.*"
   pull_request:
     branches: ["main"]
+    paths:
+      - "src/**"
+      - "Cargo.*"
   workflow_dispatch:
 
 env:
