feat!: Implemented conventional commits breaking change increment
Changed command inputs - always expects git and conventional commits.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,6 +59,9 @@ jobs:
       - name: Find next version
         id: next-version
         uses: ancosma/nexver@HEAD
+        with:
+          base-ref: ${{ github.event.pull_request.base.sha || github.event.after || '' }}
+          head-ref: ${{ github.event.pull_request.head.sha || github.event.before || '' }}
 
   patch-version:
     name: Patch version
