--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ categories = ["command-line-interface", "config", "development-tools"]
 [dependencies]
 clap = { version = "4.0.29", features = ["derive"] }
 env_logger = "0.10.0"
+git-conventional = "0.12.3"
 git2 = { version = "0.15.0", features = ["vendored-libgit2", "vendored-openssl"]}
 log = "0.4.17"
 regex = "1.7.0"
