--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,7 +44,6 @@ jobs:
 
   next-version:
     name: Detect next version
-    if: github.event.ref == 'refs/heads/main'
     runs-on: ubuntu-22.04
 
     outputs:
@@ -61,6 +60,7 @@ jobs:
         uses: ancosma/nexver@HEAD
         with:
           head-ref: ${{ github.event.pull_request.head.sha || 'HEAD' }}
+          patch-types: fix,chore(deps)
 
   patch-version:
     name: Patch version ${{ needs.next-version.outputs.tag }}
