--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -124,6 +124,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ref: ${{ github.ref_name }}
+
+      - name: Update repo
+        run: git pull
 
       - name: Cargo cache
         uses: actions/cache@v3
